monitoring/alloy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alloy-route
  namespace: monitoring
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cluster-gateway
    namespace: network
    sectionName: https
  hostnames:
  - "alloy.${INFRA_DOMAIN}"
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: alloy
      port: 12345
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
