monitoring/alloy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alloy
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: true
spec:
  ingressClassName: traefik
  rules:
  - host: alloy.${INFRA_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: alloy
            port:
              number: 12345
        path: /
        pathType: Prefix
